--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -32,7 +32,7 @@
     width: 100%;
     font-family: var(--body-font);
     font-style: normal;
-    // line-height: 0;
+    color: inherit;
     background-color: inherit;
     font-size: 1em;
     border: none;
