--- a/src/templates/SearchSelect/SearchSelect.scss
+++ b/src/templates/SearchSelect/SearchSelect.scss
@@ -23,11 +23,12 @@
     }
     .search {
       flex-grow: 1;
+      color: var(--font-color);
       input {
         font-family: var(--body-font);
         background-color: inherit;
         font-style: normal;
-        // line-height: 0;
+        color: inherit;
         font-size: 1em;
         border: none;
         width: 100%;
@@ -54,7 +55,8 @@
     .result {
       padding: var(--spacing-small) var(--spacing-med);
       &:hover {
-        background-color: lightness(var(--font-light-color), 1.18);
+        background-color: var(--bg-color-hover);
+
         cursor: pointer;
       }
     }
